# stock_latest_list

./: README.md  csv_to_sqlite_for_stock_list_for_update.py  get_data.py  get_jpx_delist.py  get_jpx_newlist.py  get_jpx_transfers.py  job_scheduler.py  main.py  make_stock_latest_list_for_update.py  pyproject.toml  stock_list.db
csv/: jpx_delist.csv  jpx_newlist.csv  jpx_stock_list.csv  jpx_transfers.csv
