[project]
name = "stock-latest-list"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.14.2",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.3",
    "colorama==0.4.6",
    "idna==3.10",
    "numpy==2.3.3",
    "packaging==25.0",
    "pandas==2.3.3",
    "pandas-stubs==2.3.2.250926",
    "pip==25.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "requests==2.32.5",
    "schedule==1.2.2",
    "six==1.17.0",
    "soupsieve==2.8",
    "tqdm==4.67.1",
    "types-pytz==2025.2.0.20250809",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
]
